feat: implementa controle associação de usuários aos produtos/categorias para futuro controle de fluxo de preparo
